--- a/2-guia/ejercicios-2/ej-1-2.tex
+++ b/2-guia/ejercicios-2/ej-1-2.tex
@@ -1,45 +1,74 @@
-\ejercicio
+\begin{enunciado}{\ejercicio}
+  \begin{enumerate}[label=\roman*)]
+    \item Reescribir cada una de las siguientes sumas usando el símbolo de sumatoria
+          \begin{multicols}{2}
+            \begin{enumerate}[label=\alph*)]
+              \item  $1 + 2 + 3 + 4 + \dots + 100$
+              \item\label{referenciaAlItem:1-2}  $1 + 2 + 4 + 8 + 16 + \dots + 1024$
+              \item  $1 + (-4) + 9 + (-16) + 25 + \dots + (-144)$
+              \item $1 + 9 + 25 + 49 + \dots + 441$
+              \item $1 + 3 + 5 + \dots + (2n + 1)$
+              \item $n + 2n + 3n + \dots + n^2$
+            \end{enumerate}
+          \end{multicols}
+    \item  Reescribir cada una de los siguientes productos usando el símbolo de productoria y/o de factorial.
+  \end{enumerate}
+\end{enunciado}
+
+¿Cómo resolver este ejercicio?\par
+Lo que queremos hacer es compactar la suma para evitar el uso
+de puntos suspensivos, la notación ideal para esos casos es el símbolo de sumatoria.
+El primer paso es fijarse en el comportamiento de cada término de
+nuesta suma. Por ejemplo, en el punto \ref{referenciaAlItem:1-2} notamos que cada término comienza a
+duplicarse.
+
 \begin{enumerate}[label=\roman*)]
-    \item Reescribir cada una de las siguientes sumas usando el símbolo de sumatoria\\ 
-    
-    ¿Cómo resolver este ejercicio?\\
-    Lo que queremos hacer es compactar la suma para evitar el uso\\
-    de puntos suspensivos, la notación ideal para esos casos es el símbolo de sumatoria.\\
-    El primer paso es fijarse en el comportamiento de cada término de\\
-    nuesta suma. Por ejemplo, en el punto \ref{referenciaAlItem:1-2} notamos que cada término comienza a\\
-    duplicarse.
+  \item
+        \begin{enumerate}[label=\alph*)]
+          \item  $
+                  1 + 2 + 3 + 4 + \dots + 100 =
+                  \sumatoria{i=1}{100}i
+                $
+          \item\label{referenciaAlItem:1-2}
+                $
+                  1 + 2 + 4 + 8 + 16 + \dots + 1024 =
+                  \sumatoria{i=0}{10}2^i
+                $
 
+          \item  $
+                  1 + (-4) + 9 + (-16) + 25 + \dots + (-144) =
+                  \sumatoria{i=1}{12}i^2(-1)^{n+1}
+                $
 
-    \begin{enumerate}[label=\alph*)] 
-        \item  $1 + 2 + 3 + 4 + \dots + 100$\\
-        Respuesta: $ \sumatoria{i=1}{100}i $\\
+          \item $
+                  1 + 9 + 25 + 49 + \dots + 441 =
+                  \sumatoria{i=0}{10}(1+2i)^2
+                $
 
-        \item\label{referenciaAlItem:1-2}  $1 + 2 + 4 + 8 + 16 + \dots + 1024$\\
-        Respuesta: $ \sumatoria{i=0}{10}2^i $\\
+          \item $
+                  1 + 3 + 5 + \dots + (2n + 1) =
+                \sumatoria{i=0}{n} 2i+1
+                $
 
-      \item  $1 + (-4) + 9 + (-16) + 25 + \dots + (-144)$\\
-        Respuesta: $ \sumatoria{i=1}{12}i^2(-1)^{n+1} $\\
+          \item $
+                  n + 2n + 3n + \dots + n^2 =
+                  \sumatoria{i=1}{n} in
+                $
+        \end{enumerate}
 
-        \item $1 + 9 + 25 + 49 + \dots + 441$\\
+  \item \begin{enumerate}[label=\alph*)]
+          \item $5 \cdot 6 \cdots 99 \cdot 100 =
+                  \productoria{i=5}{100}i = \frac{100!}{4!}
+                $
 
-        Respuesta: $ \sumatoria{i=0}{10}(1+2i)^2 $\\
+          \item $
+                  1 \cdot 2 \cdot 4 \cdot 8 \cdot 16 \cdots 1024 =
+                  \productoria{i=0}{10}2^i
+                $
 
-        \item $1 + 3 + 5 + \dots + (2n + 1)$\\
-        Respuesta: $ \sumatoria{i=0}{n} 2i+1 $\\
-
-        \item $n + 2n + 3n + \dots + n^2$\\
-        Respuesta: $ \sumatoria{i=1}{n} in $\\
-    \end{enumerate}
-
-    \item
-
-	  \begin{enumerate}[label=\alph*)]
-      \item $5 \cdot 6 \cdots 99 \cdot 100$\\
-      Respuesta: $\productoria{i=5}{100}i = \frac{100!}{4!}$\\
-
-      \item $1 \cdot 2 \cdot 4 \cdot 8 \cdot 16 \cdots 1024$\\
-      Respuesta: $\productoria{i=0}{10}2^i$\\
-
-      \item $n \cdot 2n \cdot 3n \cdots n^2$\\
-      Respuesta: $\productoria{i=1}{n}in = n^n \cdot n!$\\
+          \item $
+                  n \cdot 2n \cdot 3n \cdots n^2 =
+                  \productoria{i=1}{n}in = n^n \cdot n!
+                $
+        \end{enumerate}
 \end{enumerate}
