--- a/2-guia/ejercicios-2/ej-10-2.tex
+++ b/2-guia/ejercicios-2/ej-10-2.tex
@@ -1,4 +1,4 @@
-\ejercicio
+\begin{enunciado}{\ejercicio}
 Probar que las siguientes desigualdades son verdaderas para todo $n \in \mathbb{N}$
 \begin{multicols}{2}
     \begin{enumerate}[label=\roman*)]
@@ -11,6 +11,7 @@ Probar que las siguientes desigualdades son verdaderas para todo $n \in \mathbb{
         \item $\displaystyle \prod_{i=1}^{n} \frac{4i-1}{n+i} \geq 1$
     \end{enumerate}
 \end{multicols}
+\end{enunciado}
 
 \begin{enumerate}[label=\roman*)]
     \item $P(n): 3^n + 5^n \geq 2^{n+2},\ n \in \mathbb{N}$
