--- a/2-guia/ejercicios-2/ej-6-2.tex
+++ b/2-guia/ejercicios-2/ej-6-2.tex
@@ -34,29 +34,23 @@
         Como se cumple tanto el \textit{caso base} como el \textit{paso inductivo},
         por el principio de inducción $p(n)$ es verdadero $\paratodo n \en \naturales$.
 
-  \item $\sumatoria{i=1}{n} i^3 = \frac{n^2(n + 1)^2}{4}$\\
+  \item $\sumatoria{i=1}{n} i^3 = \frac{n^2(n + 1)^2}{4}$\par
 
-        $P(n): \text{\textquotedblleft} \sumatoria{i=1}{n} i^3 = \frac{n^2(n + 1)^2}{4} \text{\textquotedblright} \paratodo n \en \naturales$\\
-
-        \underline{Caso Base}:\\
-
-        $
-          P(1): \sumatoria{i=1}{1} i^3 = \frac{1^2(1 + 1)^2}{4}
+        $P(n):  "\sumatoria{i=1}{n} i^3 = \frac{n^2(n + 1)^2}{4}" \paratodo n \en \naturales$\par
+        \underline{Caso Base}: $ P(1): \sumatoria{i=1}{1} i^3 = \frac{1^2(1 + 1)^2}{4}
           \sisolosi 1 = \frac{4}{4}
           \sisolosi 1 = 1 \Tilde
-        $\\
+        $\par
 
         \underline{Paso Inductivo}: Sea $k \en \naturales$. Supongo $\HI{P(k)}$ Verdadero, quiero ver que $P(k + 1)$ Verdadero.
-
         \begin{align*}
           P(k + 1) \text{Verdadero}
-           & \sisolosi \sumatoria{i=1}{k + 1} i^3 = \frac{(k + 1)^2((k + 1) + 1)^2}{4}                         \\
-           & \sisolosi (\sumatoria{i=1}{k} i^3) + (k + 1)^3 = \frac{(k + 1)^2(k + 2)^2}{4}                     \\
-           & \underset{\text{HI}}{\sisolosi} \frac{k^2(k + 1)^2}{4} + (k + 1)^3 = \frac{(k + 1)^2(k + 2)^2}{4} \\
-           & \sisolosi k^2(k + 1)^2 + 4(k + 1)^3 = (k + 1)^2(k + 2)^2                                          \\
-           & \sisolosi k^2 + 4(k + 1) = (k + 2)^2                                                              \\
+           & \sisolosi \sumatoria{i=1}{k + 1} i^3 = \frac{(k + 1)^2((k + 1) + 1)^2}{4}                        \\
+           & \sisolosi (\sumatoria{i=1}{k} i^3) + (k + 1)^3 = \frac{(k + 1)^2(k + 2)^2}{4}                    \\
+           & \Sii{}[\magenta{HI}] \magenta{\frac{k^2(k + 1)^2}{4}} + (k + 1)^3 = \frac{(k + 1)^2(k + 2)^2}{4} \\
+           & \sisolosi k^2(k + 1)^2 + 4(k + 1)^3 = (k + 1)^2(k + 2)^2                                         \\
+           & \sisolosi k^2 + 4(k + 1) = (k + 2)^2                                                             \\
            & \sisolosi k^2 + 4k + 4 = k^2 + 4k + 4 \Tilde
         \end{align*}
-
         Como se cumple tanto el caso base como el paso inductivo, por el principio de inducción $P(n)$ es verdadero $\paratodo n \en \naturales$.
 \end{enumerate}
